--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "run-sequence": "^1.2.2"
   },
   "dependencies": {
-    "heatmap.js": "^2.0.5"
+    "angular-google-maps": "^2.4.0",
+    "heatmap.js": "^2.0.5",
+    "lodash": "^4.17.2"
   }
 }
