--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "angular-google-maps": "^2.4.0",
+    "bootstrap-material-design": "^0.5.10",
     "heatmap.js": "^2.0.5",
     "lodash": "^4.17.2"
   }
